feat: Add Vercel deployment guide and fix all issues
- Fixed infinite re-render loop in Dashboard
- Fixed CORS configuration for backend
- Fixed Add Expense button positioning
- Fixed Sepolia transaction link validation
- Updated decryption to check for attestations
- Added comprehensive Vercel deployment documentation
- Build successful with no errors

--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -9,14 +9,15 @@
     "verify": "hardhat run scripts/verify.ts"
   },
   "devDependencies": {
+    "@fhevm/solidity": "^0.8.0",
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.0",
     "@types/node": "^20.10.0",
     "dotenv": "^16.3.1",
-    "hardhat": "^2.19.0"
+    "hardhat": "^2.19.0",
+    "solc": "^0.8.24"
   },
   "dependencies": {
     "ethers": "^6.9.0"
   }
 }
-
