refactor: Rename app from 'Private Transaction Tracker' to 'Private Expense Tracker'
- Updated app name in all files
- Changed short name from PTT to PET
- Updated HTML title, meta tags, manifest, and i18n strings

--- a/private-ledger-flow/public/manifest.json
+++ b/private-ledger-flow/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Private Transaction Tracker",
-  "short_name": "PTT",
+  "name": "Private Expense Tracker",
+  "short_name": "PET",
   "description": "Encrypted expense dashboard with FHE and blockchain attestation",
   "start_url": "/",
   "display": "standalone",
