fix: Change npm ci to npm install in CI workflow
- npm ci requires package-lock.json which may not exist in all directories
- Changed all npm ci to npm install for better compatibility
- Generated package-lock.json for hardhat directory

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install dependencies
         run: |
           cd hardhat
-          npm ci
+          npm install
       
       - name: Run Hardhat tests
         run: |
@@ -63,7 +63,7 @@ jobs:
       - name: Install dependencies
         run: |
           cd backend
-          npm ci
+          npm install
       
       - name: Generate Prisma Client
         run: |
@@ -101,7 +101,7 @@ jobs:
       - name: Install dependencies
         run: |
           cd private-ledger-flow
-          npm ci
+          npm install
       
       - name: Run frontend tests
         run: |
