--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -131,20 +131,20 @@ jobs:
       - name: Run linter (hardhat)
         run: |
           cd hardhat
-          npm ci
+          npm install
           # Add linting if configured
           # npm run lint
       
       - name: Run linter (backend)
         run: |
           cd backend
-          npm ci
+          npm install
           npm run lint || true
       
       - name: Run linter (frontend)
         run: |
           cd private-ledger-flow
-          npm ci
+          npm install
           npm run lint || exit 0
 
   deploy-preview:
