--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,19 +1,16 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "src/server.ts",
-      "use": "@vercel/node"
-    }
-  ],
+  "buildCommand": "npm run build && npx prisma generate",
+  "outputDirectory": "dist",
+  "installCommand": "npm install",
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "src/server.ts"
+      "dest": "/api/index.ts"
     },
     {
       "src": "/(.*)",
-      "dest": "src/server.ts"
+      "dest": "/api/index.ts"
     }
   ],
   "env": {
