--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@prisma/client": "^5.7.1",
     "@types/lodash": "^4.17.20",
+    "@vercel/node": "^5.5.13",
     "axios": "^1.6.2",
     "base64-js": "^1.5.1",
     "cors": "^2.8.5",
