--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "dist/server.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "build": "tsc && npx prisma generate",
+    "build": "tsc --project tsconfig.json && npx prisma generate",
     "start": "node dist/server.js",
     "vercel-build": "npm run build",
     "test": "vitest",
